# template-infra-azure

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  code.json  copier.yml  go.mod  renovate.json  template-only.mak
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  2_feature_request.yaml
.github/workflows/: README.md  build-and-publish.yml  cd-{{app_name}}.yml.jinja  check-ci-cd-auth.yml  ci-docs.yml  ci-infra.yml  ci-{{app_name}}-infra-service.yml.jinja  ci-{{app_name}}-pr-environment-destroy.yml.jinja  ci-{{app_name}}-vulnerability-scans.yml.jinja  database-migrations.yml  deploy.yml  markdownlint-config.json  pr-environment-checks.yml  pr-environment-destroy.yml  renew-tls-certificates.yml  scan-orphaned-environments.yml  template-only-cd.yml  template-only-ci-app.yml  template-only-ci-infra.yml  vulnerability-scans.yml
docs/: system-architecture.md
docs/infra/: background-jobs.md  cloud-access-control.md  database-access-control.md  destroy-infrastructure.md  develop-and-test-infrastructure-in-isolation-using-workspaces.md  environment-variables-and-secrets.md  https-support.md  style-guide.md  (+13 more)
infra/: README.md  example.azurerm.tfbackend
infra/modules/database/resources/role_manager/: Dockerfile  Makefile  README.md  pyproject.toml
infra/modules/database/resources/role_manager/src/role_manager/: check.py  db.py  main.py  manage.py
template-only-app/: Dockerfile  Makefile  app.py  db-migrate  db.py  feature_flags.py  migrations.sql  requirements.txt  storage.py
template-only-bin/: destroy-account  destroy-app-build-repository  destroy-app-database  destroy-app-service  destroy-network  set-up-project  test-infra
template-only-test/: go.sum  template_infra_test.go
(+124 files in other folders)
