[project]
name = "role-manager"
version = "0.1.0"
description = "Set up and configuration of an existing database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.21.0",
    "pg8000",
]

[project.scripts]
hello = "role_manager.main:main"
manage = "role_manager.manage:manage_main"
check = "role_manager.check:check_main"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.11.2",
]

[tool.mypy]
pretty = true

[[tool.mypy.overrides]]
module = ["pg8000.*"]
follow_untyped_imports = true

[tool.uv]
package = true
compile-bytecode = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
